welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: not found: value estFaceRouge
		if (estFaceRouge) {
                    ^